[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "yast3"
version = "0.0.15"
description = "YaST3 desktop settings shell built with Python 3 and Qt6 Widgets."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "python-crontab>=3.0.0",
    "configobj>=5.0.9",
]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
i18n = [
    "Babel>=2.13.0",
]
qt6 = [
    "PySide6==6.11.1",
]
gtk4 = [
    "PyGObject>=3.40.0",
]
tui = [
    "textual>=0.47.0",
]

[project.gui-scripts]
yast3-qt6 = "yast3.qt6.__main__:main"
yast3-gtk4 = "yast3.gtk4.__main__:main"

[project.scripts]
yast3-tui = "yast3.tui.__main__:main"

[tool.setuptools]
packages = [
    "yast3.core",
    "yast3.core.cron",
    "yast3.core.distro",
    "yast3.core.git",
    "yast3.core.hostname",
    "yast3.core.hosts",
    "yast3.core.packages",
    "yast3.core.proxy",
    "yast3.core.repositories",
    "yast3.core.ssh",
    "yast3.core.ssh.hosts",
    "yast3.core.ssh.keys",
    "yast3.gtk4",
    "yast3.gtk4.cron",
    "yast3.gtk4.git",
    "yast3.gtk4.hostname",
    "yast3.gtk4.hosts",
    "yast3.gtk4.packages",
    "yast3.gtk4.proxy",
    "yast3.gtk4.repositories",
    "yast3.gtk4.ssh",
    "yast3.gtk4.ssh.hosts",
    "yast3.gtk4.ssh.keys",
    "yast3.qt6",
    "yast3.qt6.cron",
    "yast3.qt6.git",
    "yast3.qt6.hostname",
    "yast3.qt6.hosts",
    "yast3.qt6.packages",
    "yast3.qt6.proxy",
    "yast3.qt6.repositories",
    "yast3.qt6.ssh",
    "yast3.qt6.ssh.hosts",
    "yast3.qt6.ssh.keys",
    "yast3.tui",
    "yast3.tui.cron",
    "yast3.tui.git",
    "yast3.tui.hostname",
    "yast3.tui.hosts",
    "yast3.tui.packages",
    "yast3.tui.proxy",
    "yast3.tui.repositories",
    "yast3.tui.ssh",
]
include-package-data = true

[tool.setuptools.data-files]
"share/applications" = ["packaging/org.opensuse.yast3.qt6.desktop", "packaging/org.opensuse.yast3.gtk4.desktop"]
"share/metainfo" = ["packaging/org.opensuse.yast3.qt6.metainfo.xml", "packaging/org.opensuse.yast3.gtk4.metainfo.xml"]
"share/icons/hicolor/64x64/apps" = ["packaging/org.opensuse.yast3.qt6.svg", "packaging/org.opensuse.yast3.gtk4.svg"]
"share/locale/en/LC_MESSAGES" = ["locale/en/LC_MESSAGES/yast3.mo"]
"share/locale/zh_CN/LC_MESSAGES" = ["locale/zh_CN/LC_MESSAGES/yast3.mo"]
"share/locale/zh_TW/LC_MESSAGES" = ["locale/zh_TW/LC_MESSAGES/yast3.mo"]
"share/locale/fr/LC_MESSAGES" = ["locale/fr/LC_MESSAGES/yast3.mo"]
"share/locale/de/LC_MESSAGES" = ["locale/de/LC_MESSAGES/yast3.mo"]
"share/locale/it/LC_MESSAGES" = ["locale/it/LC_MESSAGES/yast3.mo"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []
