[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mast"
version = "0.0.20"
description = "MaST desktop settings shell built with Python 3 and Qt6 Widgets."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "python-crontab>=3.0.0",
    "configobj>=5.0.9",
]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
i18n = [
    "Babel>=2.13.0",
]
qt6 = [
    "PySide6==6.11.1",
]
gtk4 = [
    "PyGObject>=3.40.0",
]
tui = [
    "textual>=0.47.0",
]

[project.gui-scripts]
mast-qt6 = "mast.qt6.__main__:main"
mast-gtk4 = "mast.gtk4.__main__:main"

[project.scripts]
mast-tui = "mast.tui.__main__:main"

[tool.setuptools]
packages = [
    "mast.core",
    "mast.core.cron",
    "mast.core.datetime",
    "mast.core.distro",
    "mast.core.flatpak",
    "mast.core.git",
    "mast.core.hostname",
    "mast.core.hosts",
    "mast.core.languages",
    "mast.core.packages",
    "mast.core.proxy",
    "mast.core.repositories",
    "mast.core.services",
    "mast.core.snapshots",
    "mast.core.ssh",
    "mast.gtk4",
    "mast.gtk4.command",
    "mast.gtk4.cron",
    "mast.gtk4.datetime",
    "mast.gtk4.flatpak",
    "mast.gtk4.git",
    "mast.gtk4.hostname",
    "mast.gtk4.hosts",
    "mast.gtk4.languages",
    "mast.gtk4.packages",
    "mast.gtk4.proxy",
    "mast.gtk4.repositories",
    "mast.gtk4.services",
    "mast.gtk4.snapshots",
    "mast.gtk4.ssh",
    "mast.qt6",
    "mast.qt6.command",
    "mast.qt6.cron",
    "mast.qt6.datetime",
    "mast.qt6.flatpak",
    "mast.qt6.git",
    "mast.qt6.hostname",
    "mast.qt6.hosts",
    "mast.qt6.languages",
    "mast.qt6.packages",
    "mast.qt6.proxy",
    "mast.qt6.repositories",
    "mast.qt6.services",
    "mast.qt6.snapshots",
    "mast.qt6.ssh",
    "mast.tui",
    "mast.tui.cron",
    "mast.tui.datetime",
    "mast.tui.git",
    "mast.tui.hostname",
    "mast.tui.hosts",
    "mast.tui.languages",
    "mast.tui.packages",
    "mast.tui.proxy",
    "mast.tui.repositories",
    "mast.tui.services",
    "mast.tui.snapshots",
    "mast.tui.ssh",
]
include-package-data = true

[tool.setuptools.data-files]
"share/applications" = ["packaging/me.guoyunhe.mast.qt6.desktop", "packaging/me.guoyunhe.mast.gtk4.desktop"]
"share/metainfo" = ["packaging/me.guoyunhe.mast.qt6.metainfo.xml", "packaging/me.guoyunhe.mast.gtk4.metainfo.xml"]
"share/icons/hicolor/64x64/apps" = ["packaging/me.guoyunhe.mast.qt6.svg", "packaging/me.guoyunhe.mast.gtk4.svg"]
"share/locale/da/LC_MESSAGES" = ["locale/da/LC_MESSAGES/mast.mo"]
"share/locale/de/LC_MESSAGES" = ["locale/de/LC_MESSAGES/mast.mo"]
"share/locale/en/LC_MESSAGES" = ["locale/en/LC_MESSAGES/mast.mo"]
"share/locale/es/LC_MESSAGES" = ["locale/es/LC_MESSAGES/mast.mo"]
"share/locale/fi/LC_MESSAGES" = ["locale/fi/LC_MESSAGES/mast.mo"]
"share/locale/fr/LC_MESSAGES" = ["locale/fr/LC_MESSAGES/mast.mo"]
"share/locale/is/LC_MESSAGES" = ["locale/is/LC_MESSAGES/mast.mo"]
"share/locale/it/LC_MESSAGES" = ["locale/it/LC_MESSAGES/mast.mo"]
"share/locale/ja/LC_MESSAGES" = ["locale/ja/LC_MESSAGES/mast.mo"]
"share/locale/ko/LC_MESSAGES" = ["locale/ko/LC_MESSAGES/mast.mo"]
"share/locale/nl/LC_MESSAGES" = ["locale/nl/LC_MESSAGES/mast.mo"]
"share/locale/nb/LC_MESSAGES" = ["locale/nb/LC_MESSAGES/mast.mo"]
"share/locale/pl/LC_MESSAGES" = ["locale/pl/LC_MESSAGES/mast.mo"]
"share/locale/pt/LC_MESSAGES" = ["locale/pt/LC_MESSAGES/mast.mo"]
"share/locale/cs/LC_MESSAGES" = ["locale/cs/LC_MESSAGES/mast.mo"]
"share/locale/sv/LC_MESSAGES" = ["locale/sv/LC_MESSAGES/mast.mo"]
"share/locale/zh_CN/LC_MESSAGES" = ["locale/zh_CN/LC_MESSAGES/mast.mo"]
"share/locale/zh_TW/LC_MESSAGES" = ["locale/zh_TW/LC_MESSAGES/mast.mo"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    ".git",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []
